--- a/feature_engineering_health_costs_with_regression.ipynb
+++ b/feature_engineering_health_costs_with_regression.ipynb
@@ -565,7 +565,7 @@
       "cell_type": "markdown",
       "source": [
         "###Partial-Conclusion:\n",
-        "With all the feature-engineering i did, the linear regression score stayed practically the same, but the MAE decreased 13% from the results with only labelEncoding."
+        "With all the feature-engineering i did, the linear regression score stayed practically the same, but the MAE decreased 13% from the results with only labelEncoding. I have to create a better model with tf, like RandomForest"
       ],
       "metadata": {
         "id": "7LLHUBzZlUPR"
